--- a/wiki/index.html
+++ b/wiki/index.html
@@ -923,8 +923,6 @@ Error message and password prompt
 
 <li>docker</li>
 
-<li>Draft of '可重入vs幂等性'</li>
-
 <li>etcd 无法watch</li>
 
 <li>Formal language</li>
@@ -17637,8 +17635,8 @@ exports.context = contextWidget;
 <div created="20200502164750943" modified="20200606181418181" title="$:/state/strollhometabs-338615865">
 <pre>A stroll through Stroll</pre>
 </div>
-<div created="20200418122550429" modified="20200520001933307" title="$:/state/tab--1498284803">
-<pre>$:/core/ui/AdvancedSearch/System</pre>
+<div created="20200418122550429" modified="20200628165926544" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Filter</pre>
 </div>
 <div created="20200616150438012" modified="20200616150442894" title="$:/state/tab--1638394651">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
@@ -17646,8 +17644,8 @@ exports.context = contextWidget;
 <div created="20200418132348763" modified="20200628155725336" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200616145129728" modified="20200628155550350" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20200616145129728" modified="20200628165903546" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20200429214724797" modified="20200624155521434" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
@@ -17676,7 +17674,7 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200628155803586" title="$:/state/tab-1749438307">
+<div created="20200418121928767" modified="20200628165900951" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
@@ -17685,8 +17683,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200628161450094" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200418121835270" modified="20200628165857445" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -17823,7 +17821,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628155532112" title="$:/StoryList">
+<div created="20200628163506618" list="" modified="20200628165926544" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -17849,8 +17847,8 @@ exports.context = contextWidget;
 <div bag="default" created="20200127144249151" list="$:/core/ui/Buttons/close-others $:/_sq/Stories/divertTiddlerMacro $:/core/ui/Buttons/fold $:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold-bar" modified="20200625045555055" revision="0" tags="$:/giffmex/stroll" title="$:/tags/ViewToolbar" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div created="20200418122547595" modified="20200603115749767" title="$:/temp/advancedsearch">
-<pre>comptext</pre>
+<div created="20200418122547595" modified="20200628165926543" title="$:/temp/advancedsearch">
+<pre>[is[tiddler]is[shadow]sort[title]]</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -18869,7 +18867,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200628161448675" title="$:/temp/search">
+<div created="20200418122544376" modified="20200628163936949" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
@@ -19012,8 +19010,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <pre>classic</pre>
 </div>
 <div created="20200626171205069" modified="20200626173058911" tags="[[Type Theory]]" title="Algebraic data type" type="text/x-markdown">
-<pre>
-In computer programming, especially functional programming and [[Type Theory]], an algebraic data type is a kind of composite type, i.e., a type formed by combining other types.
+<pre>In computer programming, especially functional programming and [[Type Theory]], an algebraic data type is a kind of composite type, i.e., a type formed by combining other types.
 
 Two common classes of algebraic types are [[product type]]s (i.e., tuples and records) and [[sum type]] (i.e., tagged or disjoint unions, coproduct types or variant types).[1]
 
@@ -19076,8 +19073,7 @@ Bash 不支持(...)	[[Capturing group]]，所以需要使用[[Positive lookbehin
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。</pre>
 </div>
 <div created="20200622084843930" modified="20200628053827559" tags="Virtualization" title="calicao subnet not match the CIDR of a configured Calico IP Pool" type="text/x-markdown">
-<pre>
-[[docker]]
+<pre>[[docker]]
 [[calico]]
 * ailed to create endpoint #{name} on network calico-pool-1: `NetworkDriver.CreateEndpoint`: The requested subnet must match the CIDR of a configured Calico IP Pool.
 
@@ -19151,27 +19147,6 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 </div>
 <div created="20200622110429773" modified="20200622110429773" title="docker">
 <pre></pre>
-</div>
-<div created="20200628155116099" modified="20200628155116099" title="Draft of '可重入vs幂等性'">
-<pre>[[Note]]
-[[Concept]]
-
-### 可重入 （[[reentrancy]]）
-
-In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. j
-
-[[Reentrancy]] is not the same thing as [idempotence](https://www.wikiwand.com/en/Idempotence), in which the function may be called more than once yet generate exactly the same output as if it had only been called once. 
-
-
-
-#### 幂等性（[[Idempotence]]）
-
-**Idempotence** whereby they can be applied multiple times without changing the result beyond the initial application. 
-
-
-
-- in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
-- in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
 </div>
 <div created="20200617041601630" modified="20200617041630776" tags="etcd" title="etcd 无法watch" type="text/x-markdown">
 <pre>[auth token invalid after watch reconnects](https://github.com/etcd-io/etcd/issues/11954)</pre>
@@ -19539,7 +19514,7 @@ Usually means &quot;stop what you're doing&quot; -- may or may not kill the prog
 <div created="20200628075931592" modified="20200628075931592" title="SIGKILL">
 <pre></pre>
 </div>
-<div created="20200619184942925" modified="20200628152704821" tags="IPC" title="Signal" type="text/vnd.tiddlywiki">
+<div created="20200619184942925" modified="20200628164206544" tags="IPC" title="Signal" type="">
 <pre>[[Note]]
 [[Concept]]
 
