--- a/wiki/index.html
+++ b/wiki/index.html
@@ -605,6 +605,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Liberal arts-Literature--118161433</li>
 
 <li>$:/state/tree/$:/.giffmex/</li>
@@ -885,6 +887,8 @@ Error message and password prompt
 
 <li>alpine</li>
 
+<li>async-signal-safe</li>
+
 <li>async-signal-safe </li>
 
 <li>Backend</li>
@@ -1050,6 +1054,8 @@ Error message and password prompt
 <li>SIGSTOP</li>
 
 <li>SIGTERM</li>
+
+<li>SIGTRAP</li>
 
 <li>stroll</li>
 
@@ -17773,6 +17779,9 @@ exports.context = contextWidget;
 <div created="20200624162617345" modified="20200624162910764" title="$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433">
 <pre>close</pre>
 </div>
+<div created="20200629050210227" modified="20200629051014017" title="$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433">
+<pre>open</pre>
+</div>
 <div created="20200627161537894" modified="20200627161537894" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
 </div>
@@ -17821,7 +17830,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="" modified="20200628165926544" title="$:/StoryList">
+<div created="20200628163506618" list="async-signal-safe StrollTips Signal SIGTRAP" modified="20200629054143346" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18867,8 +18876,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200628163936949" title="$:/temp/search">
-<pre></pre>
+<div created="20200418122544376" modified="20200629054519889" title="$:/temp/search">
+<pre>tip</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19022,6 +19031,60 @@ Two common classes of algebraic types are [[product type]]s (i.e., tuples and re
 </div>
 <div created="20200619180319289" modified="20200619180319289" title="alpine">
 <pre></pre>
+</div>
+<div created="20200628121633232" modified="20200629060618775" tags="Signal" title="async-signal-safe">
+<pre>! signal-safety
+!! async-signal-safe functions
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+An async-signal-safe function is one that can be safely called from within a signal handler.
+
+ In particular, nonreentrant functions are generally unsafe to call from a signal handler.
+
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+!! Example
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+       When performing buffered I/O on a file, the stdio functions must
+       maintain a statically allocated data buffer along with associated
+       counters and indexes (or pointers) that record the amount of data and
+       the current position in the buffer. 
+
+       Suppose that the main program is
+       in the middle of a call to a stdio function such as printf(3) where
+       the buffer and associated variables have been partially updated.  If,
+       at that moment, the program is interrupted by a signal handler that
+       also calls printf(3), then the second call to printf(3) will operate
+       on inconsistent data, with unpredictable results.
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+!!Solution
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+       To avoid problems with unsafe functions, there are two possible
+       choices:
+
+       1. Ensure that (a) the signal handler calls only async-signal-safe
+          functions, and (b) the signal handler itself is reentrant with
+          respect to global variables in the main program.
+
+       2. Block signal delivery in the main program when calling functions
+          that are unsafe or operating on global data that is also accessed
+          by the signal handler.
+
+       Generally, the second choice is difficult in programs of any
+       complexity, so the first choice is taken.
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+       In general, a function is async-signal-safe either because it is
+       reentrant or because it is atomic with respect to signals (i.e., its
+       execution can't be interrupted by a signal handler).</pre>
 </div>
 <div created="20200628121633232" modified="20200628121633232" title="async-signal-safe ">
 <pre></pre>
@@ -19514,7 +19577,7 @@ Usually means &quot;stop what you're doing&quot; -- may or may not kill the prog
 <div created="20200628075931592" modified="20200628075931592" title="SIGKILL">
 <pre></pre>
 </div>
-<div created="20200619184942925" modified="20200628164206544" tags="IPC" title="Signal" type="">
+<div created="20200619184942925" modified="20200629050259988" tags="IPC" title="Signal" type="">
 <pre>[[Note]]
 [[Concept]]
 
@@ -19588,6 +19651,18 @@ The SIGTERM signal is a generic signal used to cause program termination.
 Unlike [[SIGKILL]], this signal can be blocked, handled, and ignored. It is the normal way to politely ask a program to terminate.
 
 The shell command [[kill]] generates SIGTERM by default.</pre>
+</div>
+<div created="20200629050212653" modified="20200629050515225" tags="Signal" title="SIGTRAP">
+<pre>[[Signal]]
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+The SIGTRAP signal is sent to a process when an exception (or trap) occurs: 
+a condition that a debugger has requested to be informed of.
+
+For example, when a particular function is executed, or when a particular variable changes value.
+&quot;&quot;&quot;
+&lt;/div&gt;</pre>
 </div>
 <div created="20200616171330922" modified="20200616171330922" title="stroll">
 <pre></pre>
