--- a/wiki/index.html
+++ b/wiki/index.html
@@ -263,6 +263,8 @@ Error message and password prompt
 
 <li>$:/config/shortcuts-mac/heading-6</li>
 
+<li>$:/config/shortcuts-mac/save-tiddler</li>
+
 <li>$:/config/shortcuts/excise</li>
 
 <li>$:/config/shortcuts/heading-1</li>
@@ -448,6 +450,8 @@ Error message and password prompt
 <li>$:/state/dropdown/keyboardshortcut/heading-5-286565879</li>
 
 <li>$:/state/dropdown/keyboardshortcut/heading-6-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/save-tiddler-286565879</li>
 
 <li>$:/state/editpreviewtype</li>
 
@@ -1791,6 +1795,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </div>
 <div created="20200628155034295" modified="20200628155034295" title="$:/config/shortcuts-mac/heading-6">
 <pre>cmd-6</pre>
+</div>
+<div created="20200629060707579" modified="20200629060707579" title="$:/config/shortcuts-mac/save-tiddler">
+<pre>cmd-S</pre>
 </div>
 <div created="20200628154931432" modified="20200628154931432" title="$:/config/shortcuts/excise">
 <pre></pre>
@@ -17524,14 +17531,14 @@ exports.context = contextWidget;
 <div created="20200624160517966" modified="20200624160517966" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/text-slicer">
 <pre>yes</pre>
 </div>
-<div created="20200628154926773" modified="20200628154926773" title="$:/state/dropdown/keyboardshortcut/excise-286565879">
-<pre>open</pre>
+<div created="20200628154926773" modified="20200629060643185" title="$:/state/dropdown/keyboardshortcut/excise-286565879">
+<pre>close</pre>
 </div>
 <div created="20200628154947733" modified="20200628154958221" title="$:/state/dropdown/keyboardshortcut/heading-1-286565879">
 <pre>close</pre>
 </div>
-<div created="20200628154959285" modified="20200628154959285" title="$:/state/dropdown/keyboardshortcut/heading-2-286565879">
-<pre>open</pre>
+<div created="20200628154959285" modified="20200629060644381" title="$:/state/dropdown/keyboardshortcut/heading-2-286565879">
+<pre>close</pre>
 </div>
 <div created="20200628155008528" modified="20200628155008528" title="$:/state/dropdown/keyboardshortcut/heading-3-286565879">
 <pre>open</pre>
@@ -17543,6 +17550,9 @@ exports.context = contextWidget;
 <pre>open</pre>
 </div>
 <div created="20200628155030387" modified="20200628155030387" title="$:/state/dropdown/keyboardshortcut/heading-6-286565879">
+<pre>open</pre>
+</div>
+<div created="20200629060703705" modified="20200629060703705" title="$:/state/dropdown/keyboardshortcut/save-tiddler-286565879">
 <pre>open</pre>
 </div>
 <div created="20200616170421212" modified="20200616170421212" title="$:/state/editpreviewtype">
@@ -17680,8 +17690,8 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200628165900951" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200418121928767" modified="20200629060713914" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -17830,7 +17840,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="async-signal-safe StrollTips Signal SIGTRAP" modified="20200629054143346" title="$:/StoryList">
+<div created="20200628163506618" list="async-signal-safe StrollTips Signal SIGTRAP" modified="20200629060638445" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
