--- a/wiki/index.html
+++ b/wiki/index.html
@@ -569,6 +569,14 @@ Error message and password prompt
 
 <li>$:/state/toc/Linux-Signal-1152169851</li>
 
+<li>$:/state/toc/Programming language-Golang--890961047</li>
+
+<li>$:/state/toc/Programming language-Programming language theory--890961047</li>
+
+<li>$:/state/toc/Programming language/Programming language theory-Type Theory--890961047</li>
+
+<li>$:/state/toc/Programming language/Programming language theory/Type Theory-Algebraic data type--890961047</li>
+
 <li>$:/state/toc/TableOfContents-Development--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Development--398414299</li>
@@ -580,6 +588,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Development-Algorithm--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development-Computing--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development-Debug--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development-Formal language--118161433</li>
 
@@ -874,6 +884,8 @@ Error message and password prompt
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
 <li>$:/temp/tobibeer/preview-1-tiddler</li>
+
+<li>$:/temp/tobibeer/preview-2-tiddler</li>
 
 <li>$:/theme</li>
 
@@ -18081,8 +18093,8 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200629161049611" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
+<div created="20200418121928767" modified="20200629161408030" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -18117,6 +18129,18 @@ exports.context = contextWidget;
 <div created="20200626110558550" modified="20200628060156990" title="$:/state/toc/Linux-Signal-1152169851">
 <pre>close</pre>
 </div>
+<div created="20200629161553263" modified="20200629161553263" title="$:/state/toc/Programming language-Golang--890961047">
+<pre>open</pre>
+</div>
+<div created="20200629161552168" modified="20200629161552168" title="$:/state/toc/Programming language-Programming language theory--890961047">
+<pre>open</pre>
+</div>
+<div created="20200629161558068" modified="20200629161558068" title="$:/state/toc/Programming language/Programming language theory-Type Theory--890961047">
+<pre>open</pre>
+</div>
+<div created="20200629161600732" modified="20200629161600732" title="$:/state/toc/Programming language/Programming language theory/Type Theory-Algebraic data type--890961047">
+<pre>open</pre>
+</div>
 <div created="20200623171543251" modified="20200626143155465" title="$:/state/toc/TableOfContents-Development--118161433">
 <pre>open</pre>
 </div>
@@ -18129,11 +18153,14 @@ exports.context = contextWidget;
 <div created="20200624163244790" modified="20200627161255773" title="$:/state/toc/TableOfContents-Quote--118161433">
 <pre>open</pre>
 </div>
-<div created="20200625044710343" modified="20200628053806505" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
-<pre>close</pre>
+<div created="20200625044710343" modified="20200629161611881" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
+<pre>open</pre>
 </div>
 <div created="20200626033025418" modified="20200626033031974" title="$:/state/toc/TableOfContents/Development-Computing--118161433">
 <pre>close</pre>
+</div>
+<div created="20200629161608176" modified="20200629161608176" title="$:/state/toc/TableOfContents/Development-Debug--118161433">
+<pre>open</pre>
 </div>
 <div created="20200626103141561" modified="20200629161154842" title="$:/state/toc/TableOfContents/Development-Formal language--118161433">
 <pre>open</pre>
@@ -18150,8 +18177,8 @@ exports.context = contextWidget;
 <div created="20200626103143294" modified="20200626103143294" title="$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433">
 <pre>open</pre>
 </div>
-<div created="20200626103456082" modified="20200628053803084" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
-<pre>close</pre>
+<div created="20200626103456082" modified="20200629161523476" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
+<pre>open</pre>
 </div>
 <div created="20200626103950075" modified="20200627161245746" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
 <pre>open</pre>
@@ -18186,7 +18213,7 @@ exports.context = contextWidget;
 <div created="20200629050210227" modified="20200629051014017" title="$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433">
 <pre>open</pre>
 </div>
-<div created="20200627161537894" modified="20200627161537894" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
+<div created="20200627161537894" modified="20200629161513064" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
 </div>
 <div created="20200504154623789" modified="20200504154625935" title="$:/state/tree/$:/.giffmex/">
@@ -18234,7 +18261,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="Signal IPC 可重入vs幂等性 async-signal-safe Linux Algorithm Computing Debug [[Formal language]] Network Backend" modified="20200629161147878" title="$:/StoryList">
+<div created="20200628163506618" list="" modified="20200629161613296" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19286,8 +19313,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200629161230949" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Positive lookbehind</pre>
+<div created="20200616161922967" modified="20200629161602121" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Type Theory</pre>
+</div>
+<div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
+<pre>Literature</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -19910,10 +19940,14 @@ This is why structs are called “product types”.
 <div created="20200626170755488" modified="20200626170755488" title="product types">
 <pre></pre>
 </div>
-<div created="20200626103404097" modified="20200626103443787" tags="[[Formal language]]" title="Programming language">
+<div created="20200626103404097" modified="20200629161549995" tags="[[Formal language]]" title="Programming language">
 <pre>A programming language is a [[Formal language]] comprising a set of instructions that produce various kinds of output.
 
- Programming languages are used in computer programming to implement algorithms.</pre>
+ &lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Programming language' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20200626143205460" modified="20200626143313694" tags="[[Programming language]]" title="Programming language theory" type="text/x-markdown">
 <pre>[[Programming language]]
