--- a/wiki/index.html
+++ b/wiki/index.html
@@ -487,15 +487,27 @@ Error message and password prompt
 
 <li>$:/state/palettemanager/showexternal</li>
 
+<li>$:/state/plugin-info--1537405794-$:/plugins/tiddlywiki/codemirror-keymap-vim---407697173</li>
+
 <li>$:/state/plugin-info--1660586530-$:/plugins/sq/Stories---1196877129</li>
 
 <li>$:/state/plugin-info--1982238690-$:/plugins/snowgoon88/edit-comptext--1750175647</li>
 
 <li>$:/state/plugin-info--270617185-$:/themes/tiddlywiki/seamless</li>
 
+<li>$:/state/plugin-info--795648560-$:/plugins/tobibeer/appear--448029843</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin--1816349830</li>
+
 <li>$:/state/plugin-info--896887961-$:/plugins/sq/Stories</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview</li>
+
+<li>$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview---536113993</li>
 
 <li>$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084</li>
 
@@ -1198,7 +1210,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20200425131030296" current-tiddler="Positive lookbehind" modified="20200629161231151" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
+<div created="20200425131030296" current-tiddler="Capturing group" modified="20200629161702167" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
 <pre>[
     {
         &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
@@ -1578,10 +1590,54 @@ Error message and password prompt
             &quot;bottom&quot;: 321.59375,
             &quot;height&quot;: 17
         }
+    },
+    {
+        &quot;title&quot;: &quot;Programming language theory&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 468.09375,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 207.1875,
+            &quot;right&quot;: 250.1875,
+            &quot;bottom&quot;: 486.09375,
+            &quot;height&quot;: 18
+        }
+    },
+    {
+        &quot;title&quot;: &quot;sum type&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 317.546875,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 64.84375,
+            &quot;right&quot;: 107.84375,
+            &quot;bottom&quot;: 335.546875,
+            &quot;height&quot;: 18
+        }
+    },
+    {
+        &quot;title&quot;: &quot;sum type&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 317.546875,
+            &quot;left&quot;: 43,
+            &quot;width&quot;: 64.84375,
+            &quot;right&quot;: 107.84375,
+            &quot;bottom&quot;: 335.546875,
+            &quot;height&quot;: 18
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Capturing group&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 253.15625,
+            &quot;left&quot;: 58,
+            &quot;width&quot;: 125.03125,
+            &quot;right&quot;: 183.03125,
+            &quot;bottom&quot;: 270.15625,
+            &quot;height&quot;: 17
+        }
     }
 ]</pre>
 </div>
-<div bag="default" created="20170615140314952" list="" modified="20200626105226298" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
+<div bag="default" created="20170615140314952" list="" modified="20200629161642871" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
 <div created="20191010123116672" modified="20200521150809747" tags="$:/tags/Stylesheet $:/giffmex/stroll $:/giffmex/blinks" title="$:/.giffmex/.Stylesheet4Stroll" type="text/css">
@@ -17850,8 +17906,8 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200510140249715" modified="20200527122505162" tags="$:/giffmex/popups" title="$:/plugins/tobibeer/preview/defaults/delay">
-<pre>100</pre>
+<div created="20200510140249715" modified="20200629161741702" tags="$:/giffmex/popups" title="$:/plugins/tobibeer/preview/defaults/delay">
+<pre>1500</pre>
 </div>
 <div created="20200423122624925" modified="20200616144851085" title="$:/SiteSubtitle">
 <pre>Note</pre>
@@ -18006,6 +18062,9 @@ exports.context = contextWidget;
 <div created="20200616180815419" modified="20200616180817715" title="$:/state/palettemanager/showexternal">
 <pre>no</pre>
 </div>
+<div created="20200629161827156" modified="20200629161901118" title="$:/state/plugin-info--1537405794-$:/plugins/tiddlywiki/codemirror-keymap-vim---407697173">
+<pre>readme</pre>
+</div>
 <div created="20200504201055477" modified="20200504201055477" title="$:/state/plugin-info--1660586530-$:/plugins/sq/Stories---1196877129">
 <pre>contents</pre>
 </div>
@@ -18015,11 +18074,26 @@ exports.context = contextWidget;
 <div created="20200616183700688" modified="20200616183700688" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/seamless">
 <pre>yes</pre>
 </div>
-<div created="20200425181557629" modified="20200425181557629" title="$:/state/plugin-info--896887961-$:/plugins/sq/Stories">
-<pre>yes</pre>
+<div created="20200629161806123" modified="20200629161806123" title="$:/state/plugin-info--795648560-$:/plugins/tobibeer/appear--448029843">
+<pre>contents</pre>
+</div>
+<div created="20200629161813288" modified="20200629161817369" title="$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin">
+<pre>no</pre>
+</div>
+<div created="20200629161815827" modified="20200629161815827" title="$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin--1816349830">
+<pre>contents</pre>
+</div>
+<div created="20200425181557629" modified="20200629161712391" title="$:/state/plugin-info--896887961-$:/plugins/sq/Stories">
+<pre>no</pre>
 </div>
 <div created="20200425181600201" modified="20200425181604513" title="$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312">
 <pre>settings</pre>
+</div>
+<div created="20200629161729908" modified="20200629161759600" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview">
+<pre>no</pre>
+</div>
+<div created="20200629161732728" modified="20200629161757695" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview---536113993">
+<pre>contents</pre>
 </div>
 <div created="20200625052044683" modified="20200625052104051" title="$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084">
 <pre>contents</pre>
@@ -18093,8 +18167,8 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200629161408030" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200418121928767" modified="20200629161709464" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -18261,7 +18335,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="" modified="20200629161613296" title="$:/StoryList">
+<div created="20200628163506618" list="$:/ControlPanel [[Formal language]] [[Algebraic data type]] [[product type]] [[Type Theory]]" modified="20200629161822670" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19313,8 +19387,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200629161602121" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Type Theory</pre>
+<div created="20200616161922967" modified="20200629161702309" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Programming language</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
