--- a/wiki/index.html
+++ b/wiki/index.html
@@ -991,6 +991,10 @@ Error message and password prompt
 
 <li>Idempotence</li>
 
+<li>idempotence</li>
+
+<li>Interrupt</li>
+
 <li>IPC</li>
 
 <li>irqbalance</li>
@@ -1058,6 +1062,8 @@ Error message and password prompt
 <li>reentrancy</li>
 
 <li>reentrant</li>
+
+<li>Reentrant</li>
 
 <li>regex</li>
 
@@ -17906,8 +17912,8 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200510140249715" modified="20200629161741702" tags="$:/giffmex/popups" title="$:/plugins/tobibeer/preview/defaults/delay">
-<pre>1500</pre>
+<div created="20200510140249715" modified="20200629162014422" tags="$:/giffmex/popups" title="$:/plugins/tobibeer/preview/defaults/delay">
+<pre>1800</pre>
 </div>
 <div created="20200423122624925" modified="20200616144851085" title="$:/SiteSubtitle">
 <pre>Note</pre>
@@ -18089,11 +18095,11 @@ exports.context = contextWidget;
 <div created="20200425181600201" modified="20200425181604513" title="$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312">
 <pre>settings</pre>
 </div>
-<div created="20200629161729908" modified="20200629161759600" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview">
-<pre>no</pre>
+<div created="20200629161729908" modified="20200629161921957" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview">
+<pre>yes</pre>
 </div>
-<div created="20200629161732728" modified="20200629161757695" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview---536113993">
-<pre>contents</pre>
+<div created="20200629161732728" modified="20200629162008840" title="$:/state/plugin-info--896887961-$:/plugins/tobibeer/preview---536113993">
+<pre>config</pre>
 </div>
 <div created="20200625052044683" modified="20200625052104051" title="$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084">
 <pre>contents</pre>
@@ -18164,7 +18170,7 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200625051821012" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
+<div created="20200624162006372" modified="20200629170325811" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
 <div created="20200418121928767" modified="20200629161709464" title="$:/state/tab-1749438307">
@@ -18275,17 +18281,17 @@ exports.context = contextWidget;
 <div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
 <pre>open</pre>
 </div>
-<div created="20200628080816068" modified="20200628080816068" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433">
-<pre>open</pre>
+<div created="20200628080816068" modified="20200629165505136" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433">
+<pre>close</pre>
 </div>
-<div created="20200628082857651" modified="20200628082857651" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
-<pre>open</pre>
+<div created="20200628082857651" modified="20200629170238759" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
+<pre>close</pre>
 </div>
 <div created="20200624162617345" modified="20200624162910764" title="$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433">
 <pre>close</pre>
 </div>
-<div created="20200629050210227" modified="20200629051014017" title="$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433">
-<pre>open</pre>
+<div created="20200629050210227" modified="20200629165449084" title="$:/state/toc/TableOfContents/Development/OS/Linux/IPC-Signal--118161433">
+<pre>close</pre>
 </div>
 <div created="20200627161537894" modified="20200629161513064" title="$:/state/toc/TableOfContents/Liberal arts-Literature--118161433">
 <pre>open</pre>
@@ -18335,7 +18341,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="$:/ControlPanel [[Formal language]] [[Algebraic data type]] [[product type]] [[Type Theory]]" modified="20200629161822670" title="$:/StoryList">
+<div created="20200628163506618" list="可重入vs幂等性 Reentrant" modified="20200629170336471" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19381,13 +19387,13 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200629094256085" title="$:/temp/search">
-<pre>Reentrant</pre>
+<div created="20200418122544376" modified="20200629170335173" title="$:/temp/search">
+<pre>可重入</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200629161702309" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200616161922967" modified="20200629161910825" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>Programming language</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
@@ -19875,6 +19881,23 @@ switch a, b:
 <div created="20200619184650746" modified="20200619184650746" title="Idempotence">
 <pre></pre>
 </div>
+<div created="20200629170531547" modified="20200629170531547" title="idempotence">
+<pre></pre>
+</div>
+<div created="20200629165725199" modified="20200629170019454" tags="Linux" title="Interrupt">
+<pre>[[Linux]]
+
+An interrupt is a response by the processor to an event that needs attention from the software
+
+
+[img[https://upload.wikimedia.org/wikipedia/commons/c/cf/Interrupt_Process.PNG?1593449894658]]
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Interrupt' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
 <div created="20200628080725926" modified="20200628080749322" tags="Linux" title="IPC" type="text/x-markdown">
 <pre>[[Linux]]
 
@@ -20051,6 +20074,21 @@ This is why structs are called “product types”.
 </div>
 <div created="20200628121633231" modified="20200628121633231" title="reentrant">
 <pre></pre>
+</div>
+<div created="20200629170211888" modified="20200629170531546" tags="Interrupt" title="Reentrant">
+<pre>[[Interrupt]]
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+In computing, a computer program or subroutine is called reentrant if multiple invocations can safely run concurrently.
+
+[[Reentrancy]] is not the same thing as [[idempotence]], in which the function may be called more than once yet generate exactly the same output as if it had only been called once.
+
+&quot;&quot;&quot;
+
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20200626103619995" modified="20200626103619995" title="regex">
 <pre></pre>
@@ -20415,13 +20453,11 @@ a weakly typed language has looser typing rules and may produce unpredictable re
 <div created="20200628080509931" modified="20200628080509931" title="内核态">
 <pre></pre>
 </div>
-<div created="20200619184445503" modified="20200628121534462" tags="ci Computing" title="可重入vs幂等性" type="text/x-markdown">
+<div created="20200619184445503" modified="20200629170434605" tags="ci Computing" title="可重入vs幂等性" type="text/x-markdown">
 <pre>[[Note]]
 [[Concept]]
 
-### 可重入 （[[reentrancy]]）
 
-In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. 
 
 [[Reentrancy]] is not the same thing as [idempotence](https://www.wikiwand.com/en/Idempotence), in which the function may be called more than once yet generate exactly the same output as if it had only been called once. 
 
